[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "support-bot-pilot-demo"
description = "FSM-governed customer support triage pilot — classify_intent -> policy_gate -> approve/deny/escalate, built on llm-nano-vm."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "llm-nano-vm>=0.8.6",
]

[project.optional-dependencies]
dev = [
    "llm-nano-vm[litellm]>=0.8.6",
    "litellm",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.8",
    "ruff>=0.4",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["programs.py", "tools.py", "providers.py", "support_demo.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
